footer links reduced

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -43,7 +43,7 @@
             <div class="header d-lg-flex justify-content-between align-items-center py-sm-3 py-2 px-sm-2 px-1">
                 <!-- logo -->
                 <div id="logo">
-                    <h6><a href="index.html" title="Ideal Assignments Help"> <img src="./images/logo bar.jpeg" alt=""
+                    <h6><a href="/" title="Ideal Assignments Help"> <img src="./images/logo bar.jpeg" alt=""
                                 style="width: 55px;"> </a></h6>
                 </div>
                 <!-- //logo -->
@@ -53,8 +53,8 @@
                         <label for="drop" class="toggle">Menu</label>
                         <input type="checkbox" id="drop" />
                         <ul class="menu">
-                            <li><a href="index.html" class="active">Home</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="/" class="active">Home</a></li>
+                            <li><a href="/about">About</a></li>
                             <li>
                                 <!-- First Tier Drop Down -->
                                 <label for="drop-2" class="toggle toogle-2">Resources <span class="fa fa-angle-down"
@@ -63,11 +63,11 @@
                                 <a href="#">Resources <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li><a href="resources.html" class="drop-text">Assignments Resources</a></li>
-                                    <li><a href="index.html" class="drop-text">More</a></li>
+                                    <li><a href="/resources" class="drop-text">Assignments Resources</a></li>
+                                    <li><a href="/" class="drop-text">More</a></li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="/contact">Contact</a></li>
                             <li class="nav-right-sty mt-lg-0 mt-sm-4 mt-3">
                                 <a href="/signin" class="reqe-button text-uppercase">Login</a>
                                 <a href="register.html" class="reqe-button text-uppercase">Register</a>
@@ -88,7 +88,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
-                <a href="index.html" class="m-0">Home</a>
+                <a href="/" class="m-0">Home</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">About Us</li>
         </ol>
@@ -277,7 +277,7 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-start">
-                            <a href="about.html" class="btn w3ls-btn">view more</a>
+                            <a href="/about" class="btn w3ls-btn">view more</a>
                         </div>
                     </div>
 
@@ -288,16 +288,14 @@
     </section> -->
     <!-- //services -->
     <!-- team -->
-    <section class="w3layouts_hubits-services align-w3" id="team">
+    <!-- <section class="w3layouts_hubits-services align-w3" id="team">
         <div class="container">
             <div class="wthree_pvt_title text-center">
                 <h4 class="w3pvt-title">our experts
                 </h4>
-                <!-- <p class="sub-title">Subheadings stand out because they are like mini titles. They make your post stand
-                    out and
-                    make it more readable.</p> -->
-            </div>
-            <div class="row py-4 mt-lg-5  team-grid">
+             
+            </div> -->
+            <!-- <div class="row py-4 mt-lg-5  team-grid">
                 <div class="col-md-4 col-sm-6">
                     <div class="box13">
                         <img src="images/t1.jpg" class="img-fluid" alt="" />
@@ -340,13 +338,13 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- submit now side panel -->
     <!-- submit now button -->
     <span id="submit_now">
         
-        <a href="index.html" style="text-decoration: none;">  Submit now </a>
+        <a href="/" style="text-decoration: none;">  Submit now </a>
     
       </span>
 
@@ -417,7 +415,7 @@
                     </div>
                 </div>
                         <!-- <div class="d-flex justify-content-start">
-                            <a href="about.html" class="btn w3ls-btn">view more</a>
+                            <a href="/about" class="btn w3ls-btn">view more</a>
                         </div> -->
                     </div>
                 </div>
@@ -436,7 +434,7 @@
         <div class="row p-sm-4 px-3 py-3">
             <div class="col-lg-4 footer-top mt-md-0 mt-sm-5">
                 <h4>
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="/">
                         Ideal Assignments Help
                     </a>
                 </h4>
@@ -462,27 +460,27 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="index.html">
+                            <a href="/">
                                 Home
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="about.html">
+                            <a href="/about">
                                 About Us
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="resources.html">
+                            <a href="/resources">
                                 Resources
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="single.html">
+                            <a href="/portfolio">
                                 Blog
                             </a>
                         </li>
                         <li>
-                            <a href="contact.html">
+                            <a href="/contact">
                                 Contact Us
                             </a>
                         </li>
@@ -495,27 +493,27 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="about.html">
+                            <a href="/about">
                                 Our Mission
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="single.html">
+                            <a href="/portfolio">
                                 Latest posts
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="resources.html">
+                            <a href="/resources">
                                 Explore
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="contact.html">
+                            <a href="/contact">
                                 Find us
                             </a>
                         </li>
                         <li>
-                            <a href="index.html">
+                            <a href="/">
                                 Privacy Policy
                             </a>
                         </li>
@@ -528,27 +526,27 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="single.html">
+                            <a href="/portfolio">
                                 more
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="resources.html">
+                            <a href="/resources">
                                 our work
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="about.html">
+                            <a href="/about">
                                 Explore
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="contact.html">
+                            <a href="/contact">
                                 contact us
                             </a>
                         </li>
                         <li>
-                            <a href="index.html">
+                            <a href="/">
                                 references
                             </a>
                         </li>
@@ -561,17 +559,17 @@
                     <hr>
                     <ul class="list-w3pvtits">
                         <li class="my-2">
-                            <a href="resources.html">
+                            <a href="/resources">
                                 Explore
                             </a>
                         </li>
                         <li>
-                            <a href="about.html">
+                            <a href="/about">
                                 Our Mission
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="single.html">
+                            <a href="/portfolio">
                                 Latest posts
                             </a>
                         </li>
@@ -583,7 +581,7 @@
                                     <hr>
                                     <ul class="list-w3pvtits ft-link">
                                         <!-- <li class="my-2">
-                                            <a href="resources.html">
+                                            <a href="/resources">
                                                 Explore
                                             </a>
                                         </li> -->
@@ -599,7 +597,7 @@
                                         </li>
             
                                         <!-- <li class="mb-2">
-                                            <a href="contact.html">
+                                            <a href="/contact">
                                                 Find us
                                             </a>
                                         </li> -->
