--- a/views/index.ejs
+++ b/views/index.ejs
@@ -444,111 +444,46 @@
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="about">
+                            <a href="/about">
                                 About Us
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
+                            <a href="/portfolio">
                                 Resources
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="single">
+                            <a href="/portfolio">
                                 Blog
                             </a>
                         </li>
                         <li>
-                            <a href="contact">
+                            <a href="/contact">
                                 Contact Us
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
+        
             <div class="col-lg-2  col-md-6 mt-lg-0 mt-4">
                 <div class="footerv2-w3ls">
                     <h3 class="mb-3 w3f_title">Links</h3>
                     <hr>
                     <ul class="list-w3pvtits">
-                        <li>
-                            <a href="about">
-                                Our Mission
-                            </a>
-                        </li>
                         <li class="my-2">
-                            <a href="single">
-                                Latest posts
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="portfolio">
-                                Explore
-                            </a>
-                        </li>
-                        <li class="mb-2">
-                            <a href="contact">
-                                Find us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/">
+                            <a href="/portfolio">
                                 Privacy Policy
                             </a>
                         </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-6 mt-lg-0 mt-4">
-                <div class="footerv2-w3ls">
-                    <h3 class="mb-3 w3f_title">Links</h3>
-                    <hr>
-                    <ul class="list-w3pvtits">
                         <li>
-                            <a href="single">
-                                more
+                            <a href="/about">
+                               Refund Policy
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="portfolio">
-                                our work
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="about">
-                                Explore
-                            </a>
-                        </li>
-                        <li class="mb-2">
-                            <a href="contact">
-                                contact us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/">
-                                references
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2  col-md-6 mt-lg-0 mt-4">
-                <div class="footerv2-w3ls">
-                    <h3 class="mb-3 w3f_title">Links</h3>
-                    <hr>
-                    <ul class="list-w3pvtits">
-                        <li class="my-2">
-                            <a href="portfolio">
-                                Explore
-                            </a>
-                        </li>
-                        <li>
-                            <a href="about">
-                                Our Mission
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="single">
+                            <a href="/single">
                                 Latest posts
                             </a>
                         </li>
@@ -559,11 +494,6 @@
                                     <h3 class="mb-3 w3f_titlte ">Our Social Handles</h3>
                                     <hr>
                                     <ul class="list-w3pvtits ft-link">
-                                        <!-- <li class="my-2">
-                                            <a href="portfolio">
-                                                Explore
-                                            </a>
-                                        </li> -->
                                         <li>
                                             <a href="https://twitter.com/idealassignmen2?s=08">
                                                 <i class="fa fa-twitter-square fa-2x fa-fw"></i>
@@ -574,12 +504,8 @@
                                                 <i class="fa fa-facebook fa-2x fa-fw ft-face"></i>
                                             </a>
                                         </li>
-            
-                                        <!-- <li class="mb-2">
-                                            <a href="contact">
-                                                Find us
-                                            </a>
-                                        </li> -->
+        
+                                    
                                         <li>
                                             <a href="https://www.instagram.com/idealassignmentshelp/">
                                                 
@@ -618,7 +544,6 @@
     <!-- //footer bottom -->
 </footer>
 
-<!-- //move top icon -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
