--- a/views/stat.ejs
+++ b/views/stat.ejs
@@ -176,22 +176,12 @@ From descriptive statistics to inferential statistics, we can provide you with s
 </div>
 
 
-
-
-
-
-
-
-
-
-
-
 <footer class="footer py-md-5 pt-md-3 pb-sm-5">
     <div class="container">
         <div class="row p-sm-4 px-3 py-3">
             <div class="col-lg-4 footer-top mt-md-0 mt-sm-5">
                 <h4>
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="/">
                         Ideal Assignments Help
                     </a>
                 </h4>
@@ -217,116 +207,51 @@ From descriptive statistics to inferential statistics, we can provide you with s
                     <hr>
                     <ul class="list-w3pvtits">
                         <li>
-                            <a href="index.html">
+                            <a href="/">
                                 Home
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="about.html">
+                            <a href="/about">
                                 About Us
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="resources.html">
+                            <a href="/portfolio">
                                 Resources
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="single.html">
+                            <a href="/portfolio">
                                 Blog
                             </a>
                         </li>
                         <li>
-                            <a href="contact.html">
+                            <a href="/contact">
                                 Contact Us
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
+        
             <div class="col-lg-2  col-md-6 mt-lg-0 mt-4">
                 <div class="footerv2-w3ls">
                     <h3 class="mb-3 w3f_title">Links</h3>
                     <hr>
                     <ul class="list-w3pvtits">
-                        <li>
-                            <a href="about.html">
-                                Our Mission
-                            </a>
-                        </li>
                         <li class="my-2">
-                            <a href="single.html">
-                                Latest posts
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="resources.html">
-                                Explore
-                            </a>
-                        </li>
-                        <li class="mb-2">
-                            <a href="contact.html">
-                                Find us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.html">
+                            <a href="/portfolio">
                                 Privacy Policy
                             </a>
                         </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-6 mt-lg-0 mt-4">
-                <div class="footerv2-w3ls">
-                    <h3 class="mb-3 w3f_title">Links</h3>
-                    <hr>
-                    <ul class="list-w3pvtits">
                         <li>
-                            <a href="single.html">
-                                more
+                            <a href="/about">
+                               Refund Policy
                             </a>
                         </li>
                         <li class="my-2">
-                            <a href="resources.html">
-                                our work
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="about.html">
-                                Explore
-                            </a>
-                        </li>
-                        <li class="mb-2">
-                            <a href="contact.html">
-                                contact us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.html">
-                                references
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2  col-md-6 mt-lg-0 mt-4">
-                <div class="footerv2-w3ls">
-                    <h3 class="mb-3 w3f_title">Links</h3>
-                    <hr>
-                    <ul class="list-w3pvtits">
-                        <li class="my-2">
-                            <a href="resources.html">
-                                Explore
-                            </a>
-                        </li>
-                        <li>
-                            <a href="about.html">
-                                Our Mission
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="single.html">
+                            <a href="/single">
                                 Latest posts
                             </a>
                         </li>
@@ -337,11 +262,6 @@ From descriptive statistics to inferential statistics, we can provide you with s
                                     <h3 class="mb-3 w3f_titlte ">Our Social Handles</h3>
                                     <hr>
                                     <ul class="list-w3pvtits ft-link">
-                                        <!-- <li class="my-2">
-                                            <a href="resources.html">
-                                                Explore
-                                            </a>
-                                        </li> -->
                                         <li>
                                             <a href="https://twitter.com/idealassignmen2?s=08">
                                                 <i class="fa fa-twitter-square fa-2x fa-fw"></i>
@@ -352,12 +272,8 @@ From descriptive statistics to inferential statistics, we can provide you with s
                                                 <i class="fa fa-facebook fa-2x fa-fw ft-face"></i>
                                             </a>
                                         </li>
-            
-                                        <!-- <li class="mb-2">
-                                            <a href="contact.html">
-                                                Find us
-                                            </a>
-                                        </li> -->
+        
+                                    
                                         <li>
                                             <a href="https://www.instagram.com/idealassignmentshelp/">
                                                 
@@ -395,19 +311,6 @@ From descriptive statistics to inferential statistics, we can provide you with s
     </div>
     <!-- //footer bottom -->
 </footer>
-<!-- //footer -->
-<!-- copyright -->
-<div class="cpy-right text-center">
-    <!-- <p class="text-bl">© 2021 Ideal Assignments Help. All rights reserved | Design by
-        <a href="http://w3layouts.com"> Abideen Muhammed </a>
-    </p> -->
-</div>
-<!-- //copyright -->
-<!-- move top icon -->
-<!-- <a href="#home" class="move-top text-center">
-    <span class="fa fa-level-up" aria-hidden="true"></span>
-</a> -->
-<!-- //move top icon -->
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
