--- a/views/business.ejs
+++ b/views/business.ejs
@@ -215,219 +215,141 @@ We are passionate and excited to work with you in writing effective business pla
                 </div>
                 </div>
                 </div>
-
-    
-<footer class="footer py-md-5 pt-md-3 pb-sm-5">
-    <div class="container">
-        <div class="row p-sm-4 px-3 py-3">
-            <div class="col-lg-4 footer-top mt-md-0 mt-sm-5">
-                <h4>
-                    <a class="navbar-brand" href="index.html">
-                        Ideal Assignments Help
-                    </a>
-                </h4>
-                <div class="fv3-contact mt-2">
-                    <p>
-                        <a href="mailto:info@assignmentshelp.com">info@idealassignmentshelp.com</a>
-                    </p>
-                </div>
-                <div class="fv3-contact my-2">
-                    <p>+1 786 608 7165</p>
-                </div>
-                <div class="fv3-contact">
-                    <p>1410 Range Avenue, Santa Rosa
-                        <br> CA, 95401.
-                    </p>
-                    <hr>
-                    <p>Disclaimer: The reference papers provided by idealassignmentshelp.com serves as model papers for students and are not to be submitted as it is. These papers are intended to be used for research and reference purposes only.</p>
-                </div>
-            </div>
-            <div class="col-lg-2  col-md-6 mt-lg-0 mt-4">
-                <div class="footerv2-w3ls">
-                    <h3 class="mb-3 w3f_title">Navigation</h3>
-                    <hr>
-                    <ul class="list-w3pvtits">
-                        <li>
-                            <a href="index.html">
-                                Home
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="about.html">
-                                About Us
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="resources.html">
-                                Resources
-                            </a>
-                        </li>
-                        <li class="mb-2">
-                            <a href="single.html">
-                                Blog
-                            </a>
-                        </li>
-                        <li>
-                            <a href="contact.html">
-                                Contact Us
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2  col-md-6 mt-lg-0 mt-4">
-                <div class="footerv2-w3ls">
-                    <h3 class="mb-3 w3f_title">Links</h3>
-                    <hr>
-                    <ul class="list-w3pvtits">
-                        <li>
-                            <a href="about.html">
-                                Our Mission
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="single.html">
-                                Latest posts
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="resources.html">
-                                Explore
-                            </a>
-                        </li>
-                        <li class="mb-2">
-                            <a href="contact.html">
-                                Find us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.html">
-                                Privacy Policy
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-6 mt-lg-0 mt-4">
-                <div class="footerv2-w3ls">
-                    <h3 class="mb-3 w3f_title">Links</h3>
-                    <hr>
-                    <ul class="list-w3pvtits">
-                        <li>
-                            <a href="single.html">
-                                more
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="resources.html">
-                                our work
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="about.html">
-                                Explore
-                            </a>
-                        </li>
-                        <li class="mb-2">
-                            <a href="contact.html">
-                                contact us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.html">
-                                references
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2  col-md-6 mt-lg-0 mt-4">
-                <div class="footerv2-w3ls">
-                    <h3 class="mb-3 w3f_title">Links</h3>
-                    <hr>
-                    <ul class="list-w3pvtits">
-                        <li class="my-2">
-                            <a href="resources.html">
-                                Explore
-                            </a>
-                        </li>
-                        <li>
-                            <a href="about.html">
-                                Our Mission
-                            </a>
-                        </li>
-                        <li class="my-2">
-                            <a href="single.html">
-                                Latest posts
-                            </a>
-                        </li>
-
-                        <li class="mb-2">
+                <footer class="footer py-md-5 pt-md-3 pb-sm-5">
+                    <div class="container">
+                        <div class="row p-sm-4 px-3 py-3">
+                            <div class="col-lg-4 footer-top mt-md-0 mt-sm-5">
+                                <h4>
+                                    <a class="navbar-brand" href="/">
+                                        Ideal Assignments Help
+                                    </a>
+                                </h4>
+                                <div class="fv3-contact mt-2">
+                                    <p>
+                                        <a href="mailto:info@assignmentshelp.com">info@idealassignmentshelp.com</a>
+                                    </p>
+                                </div>
+                                <div class="fv3-contact my-2">
+                                    <p>+1 786 608 7165</p>
+                                </div>
+                                <div class="fv3-contact">
+                                    <p>1410 Range Avenue, Santa Rosa
+                                        <br> CA, 95401.
+                                    </p>
+                                    <hr>
+                                    <p>Disclaimer: The reference papers provided by idealassignmentshelp.com serves as model papers for students and are not to be submitted as it is. These papers are intended to be used for research and reference purposes only.</p>
+                                </div>
+                            </div>
                             <div class="col-lg-2  col-md-6 mt-lg-0 mt-4">
                                 <div class="footerv2-w3ls">
-                                    <h3 class="mb-3 w3f_titlte ">Our Social Handles</h3>
+                                    <h3 class="mb-3 w3f_title">Navigation</h3>
                                     <hr>
-                                    <ul class="list-w3pvtits ft-link">
-                                        <!-- <li class="my-2">
-                                            <a href="resources.html">
-                                                Explore
-                                            </a>
-                                        </li> -->
+                                    <ul class="list-w3pvtits">
                                         <li>
-                                            <a href="https://twitter.com/idealassignmen2?s=08">
-                                                <i class="fa fa-twitter-square fa-2x fa-fw"></i>
+                                            <a href="/">
+                                                Home
                                             </a>
                                         </li>
                                         <li class="my-2">
-                                            <a href="https://www.facebook.com/Idealassignmentshelp-351101802531220/">
-                                                <i class="fa fa-facebook fa-2x fa-fw ft-face"></i>
+                                            <a href="/about">
+                                                About Us
                                             </a>
                                         </li>
-            
-                                        <!-- <li class="mb-2">
-                                            <a href="contact.html">
-                                                Find us
+                                        <li class="my-2">
+                                            <a href="/portfolio">
+                                                Resources
                                             </a>
-                                        </li> -->
+                                        </li>
+                                        <li class="mb-2">
+                                            <a href="/portfolio">
+                                                Blog
+                                            </a>
+                                        </li>
                                         <li>
-                                            <a href="https://www.instagram.com/idealassignmentshelp/">
-                                                
-                                            <i class="fa fa-instagram fa-2x fa-fw"></i>
+                                            <a href="/contact">
+                                                Contact Us
                                             </a>
-                                            
                                         </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        
+                            <div class="col-lg-2  col-md-6 mt-lg-0 mt-4">
+                                <div class="footerv2-w3ls">
+                                    <h3 class="mb-3 w3f_title">Links</h3>
+                                    <hr>
+                                    <ul class="list-w3pvtits">
+                                        <li class="my-2">
+                                            <a href="/portfolio">
+                                                Privacy Policy
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="/about">
+                                               Refund Policy
+                                            </a>
+                                        </li>
+                                        <li class="my-2">
+                                            <a href="/single">
+                                                Latest posts
+                                            </a>
+                                        </li>
+                
+                                        <li class="mb-2">
+                                            <div class="col-lg-2  col-md-6 mt-lg-0 mt-4">
+                                                <div class="footerv2-w3ls">
+                                                    <h3 class="mb-3 w3f_titlte ">Our Social Handles</h3>
+                                                    <hr>
+                                                    <ul class="list-w3pvtits ft-link">
+                                                        <li>
+                                                            <a href="https://twitter.com/idealassignmen2?s=08">
+                                                                <i class="fa fa-twitter-square fa-2x fa-fw"></i>
+                                                            </a>
+                                                        </li>
+                                                        <li class="my-2">
+                                                            <a href="https://www.facebook.com/Idealassignmentshelp-351101802531220/">
+                                                                <i class="fa fa-facebook fa-2x fa-fw ft-face"></i>
+                                                            </a>
+                                                        </li>
+                        
+                                                    
+                                                        <li>
+                                                            <a href="https://www.instagram.com/idealassignmentshelp/">
+                                                                
+                                                            <i class="fa fa-instagram fa-2x fa-fw"></i>
+                                                            </a>
+                                                            
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- footer image -->
+                                    <div class="footer-img">
+                                        <a rel="nofollow noreferrer noopener" href="images/dmca_protected.png" target="_blank" title="DMCA.com Protection Status" class="dmca-badge">
+                                          <img data-src="#" alt="DMCA.com Protection Status" width="121px" height="24px" class="loaded" src="https://www.globalassignmenthelp.com/GAH/images/dmca_protected.png?v=1.112" data-was-processed="true">
+                                        </a>
+                                        <img data-src="#" alt="payment icon" width="207px" height="23px" class="loaded" src="images/payment-secure-footer.png" data-was-processed="true">
+                                      </div>
+                                    <!-- //footer bottom -->
+                                </footer>
+                                <!-- //footer -->
+                                <!-- copyright -->
+                                <div class="cpy-right text-center">
+                                    <p class="text-wh">© 2021 Ideal Assignments Help. All rights reserved | Design by
+                                        <a href="http://github.com/abideen305"> Abideen Muhammed</a>
+                                    </p>
+                                </div>
+                                <!-- //copyright -->            
+                                       
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- footer image -->
-                    <div class="footer-img">
-                        <a rel="nofollow noreferrer noopener" href="images/dmca_protected.png" target="_blank" title="DMCA.com Protection Status" class="dmca-badge">
-                          <img data-src="#" alt="DMCA.com Protection Status" width="121px" height="24px" class="loaded" src="https://www.globalassignmenthelp.com/GAH/images/dmca_protected.png?v=1.112" data-was-processed="true">
-                        </a>
-                        <img data-src="#" alt="payment icon" width="207px" height="23px" class="loaded" src="images/payment-secure-footer.png" data-was-processed="true">
-                      </div>
                     <!-- //footer bottom -->
                 </footer>
-                <!-- //footer -->
-                <!-- copyright -->
-                <div class="cpy-right text-center">
-                    <p class="text-wh">© 2021 Ideal Assignments Help. All rights reserved | Design by
-                        <a href="http://github.com/abideen305"> Abideen Muhammed</a>
-                    </p>
-                </div>
-                <!-- //copyright -->            
-                       
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- //footer bottom -->
-</footer>
-<!-- //footer -->
-<!-- copyright -->
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
