--- a/views/forgot_password.ejs
+++ b/views/forgot_password.ejs
@@ -156,7 +156,7 @@
       <!-- Login Breadcrum -->
 
       <ul class="breadcrumb">
-        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
         <li class="breadcrumb-item"><a href="login.html">Log in</a></li>
         <li class="breadcrumb-item">Forgotten password</li>
       </ul>
@@ -250,7 +250,7 @@
         <div class="row p-sm-4 px-3 py-3">
           <div class="col-lg-4 footer-top mt-md-0 mt-sm-5">
             <h2>
-              <a class="navbar-brand" href="index.html">
+              <a class="navbar-brand" href="/">
                 Ideal Assignments Help
               </a>
             </h2>
@@ -277,19 +277,19 @@
               <hr />
               <ul class="list-w3pvtits">
                 <li>
-                  <a href="index.html"> Home </a>
+                  <a href="/"> Home </a>
                 </li>
                 <li class="my-2">
-                  <a href="about.html"> About Us </a>
+                  <a href="/about"> About Us </a>
                 </li>
                 <li class="my-2">
-                  <a href="resources.html"> Resources </a>
+                  <a href="/resources"> Resources </a>
                 </li>
                 <li class="mb-2">
-                  <a href="single.html"> Blog </a>
+                  <a href="/portfolio"> Blog </a>
                 </li>
                 <li>
-                  <a href="contact.html"> Contact Us </a>
+                  <a href="/contact"> Contact Us </a>
                 </li>
               </ul>
             </div>
@@ -300,19 +300,19 @@
               <hr />
               <ul class="list-w3pvtits">
                 <li>
-                  <a href="about.html"> Our Mission </a>
+                  <a href="/about"> Our Mission </a>
                 </li>
                 <li class="my-2">
-                  <a href="single.html"> Latest posts </a>
+                  <a href="/portfolio"> Latest posts </a>
                 </li>
                 <li class="my-2">
-                  <a href="resources.html"> Explore </a>
+                  <a href="/resources"> Explore </a>
                 </li>
                 <li class="mb-2">
-                  <a href="contact.html"> Find us </a>
+                  <a href="/contact"> Find us </a>
                 </li>
                 <li>
-                  <a href="index.html"> Privacy Policy </a>
+                  <a href="/"> Privacy Policy </a>
                 </li>
               </ul>
             </div>
@@ -323,7 +323,7 @@
               <hr />
               <ul class="list-w3pvtits">
                 <!-- <li class="my-2">
-                                <a href="resources.html">
+                                <a href="/resources">
                                     Explore
                                 </a>
                             </li> -->
@@ -341,7 +341,7 @@
                 </li>
 
                 <!-- <li class="mb-2">
-                                <a href="contact.html">
+                                <a href="/contact">
                                     Find us
                                 </a>
                             </li> -->
